--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "mongo-node-app",
   "version": "1.0.0",
   "dependencies": {
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.7.0",
+    "mongoose": "^8.3.3",
+    "axios": "^1.6.7"
   }
 }
